[ofono-binder] Initial implementation. JB#55524
The logic is based on ofono-ril-plugin. Only interfaces up to and
including IRadio@1.2 are fully supported, although bits and pieces
of IRadio@1.4 are already there. Full support for IRadio@1.4 will
be added later as a separate task.

For now, only the standard (as in "defined by Google") IRadio
interfaces are used. Support for vendor-specific extensions is
planned and will be added later.

--- a/README
+++ b/README
@@ -2,3 +2,11 @@ Binder based ofono plugin.
 
 Integrates Sailfish OS fork of ofono with Android adaptations
 which support IRadio family of binder interfaces.
+
+This plugin is a replacement for ofono-ril-plugin.
+
+For reliable startup, /etc/ofono/binder.conf has to list all
+expected slots, for example:
+
+  [Settings]
+  ExpectSlots = slot1,slot2
