--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libofonobinderpluginext (1.1.0) unstable; urgency=low
+
+  * Stable release of the extension API
+
+ -- Slava Monich <slava.monich@jolla.com>  Fri, 22 Apr 2022 04:04:02 +0300
+
 libofonobinderpluginext (1.0.3) unstable; urgency=low
 
   * Added debian packaging for the extension lib
